--- a/Covid19IncidenceRasInhibitors/extras/Table1TopDouble.tex
+++ b/Covid19IncidenceRasInhibitors/extras/Table1TopDouble.tex
@@ -1,16 +1,25 @@
-\begin{table}
-\caption{\textbf{Patient demographics.} We report proportion of initiators satisfying selected base-line characteristics and the standardized difference of population proportions (StdDiff) before and after stratification.  Less extreme StdDiffs through stratification suggest improved balance between patient cohorts through propensity score adjustment.}\label{tab:demographics}
-\vspace*{-0.5em}
-\centerline{
-\resizebox{0.5\textwidth}{!}{
+\begin{landscape}
+\begin{footnotesize}
 \rowcolors{2}{gray!6}{white}
-\begin{tabular}{lrrrrrrrrrrrr}
+\begin{longtable}{lrrrrrrrrrrrr}
+\caption{\textbf{Patient demographics.} We report proportion of initiators satisfying selected base-line characteristics and the standardized difference of population proportions (StdDiff) before and after stratification.  Less extreme StdDiffs through stratification suggest improved balance between patient cohorts through propensity score adjustment.}\label{tab:demographics}
+\\
 \hiderowcolors
 \toprule
+& \multicolumn{6}{c}{SIDIAP} & \multicolumn{6}{c}{CUIMC} \\
+\cmidrule(lr){2-7} \cmidrule(lr){8-13}
+\multicolumn{1}{c}{Characteristic}
+& \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification}
 & \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification} \\
 % Extra row
-\cmidrule(lr){2-4} \cmidrule(lr){5-7}
-\multicolumn{1}{c}{Characteristic}
+\cmidrule(lr){2-4} \cmidrule(lr){5-7} \cmidrule(lr){8-10} \cmidrule(lr){11-13}
+%\multicolumn{1}{c}{Characteristic}
+  & \multicolumn{1}{c}{T (\%)}
+  & \multicolumn{1}{c}{C (\%)}
+  & \multicolumn{1}{c}{StdDiff}
+  & \multicolumn{1}{c}{T (\%)}
+  & \multicolumn{1}{c}{C (\%)}
+  & \multicolumn{1}{c}{StdDiff}
   & \multicolumn{1}{c}{T (\%)}
   & \multicolumn{1}{c}{C (\%)}
   & \multicolumn{1}{c}{StdDiff}
@@ -18,4 +27,27 @@
   & \multicolumn{1}{c}{C (\%)}
   & \multicolumn{1}{c}{StdDiff} \\
 \midrule
+\endfirsthead
+(Continued) & \multicolumn{6}{c}{SIDIAP} & \multicolumn{6}{c}{CUIMC} \\
+\cmidrule(lr){2-7} \cmidrule(lr){8-13}
+\multicolumn{1}{c}{Characteristic}
+& \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification}
+& \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification} \\
+% Extra row
+\cmidrule(lr){2-4} \cmidrule(lr){5-7} \cmidrule(lr){8-10} \cmidrule(lr){11-13}
+%\multicolumn{1}{c}{Characteristic}
+  & \multicolumn{1}{c}{T (\%)}
+  & \multicolumn{1}{c}{C (\%)}
+  & \multicolumn{1}{c}{StdDiff}
+  & \multicolumn{1}{c}{T (\%)}
+  & \multicolumn{1}{c}{C (\%)}
+  & \multicolumn{1}{c}{StdDiff}
+  & \multicolumn{1}{c}{T (\%)}
+  & \multicolumn{1}{c}{C (\%)}
+  & \multicolumn{1}{c}{StdDiff}
+  & \multicolumn{1}{c}{T (\%)}
+  & \multicolumn{1}{c}{C (\%)}
+  & \multicolumn{1}{c}{StdDiff} \\
+\midrule
+\endhead
 \showrowcolors
