--- a/Covid19IncidenceRasInhibitors/extras/Results.Rmd
+++ b/Covid19IncidenceRasInhibitors/extras/Results.Rmd
@@ -758,6 +758,59 @@ invisible(dev.off())
   }
 \end{figure}
 
+# Count covariates
+
+```{r, echo=FALSE, cache=TRUE}
+files <- list.files(file.path(sidiapDir, "shinyData"), 
+                    pattern = "covariate_balance_t\\d",
+                    full.names = TRUE)
+
+sidiapCounts <- do.call("rbind.data.frame",
+                        lapply(files, function(file) {
+                          bal <- readRDS(file)
+                          t <- sub(".*t", "", file)
+                          target <- sub("_.*", "", t)
+                          c <- sub(".*c", "", file)
+                          comparator <- sub("_.*", "", c)
+                          return(list(rows = nrow(bal), target = as.numeric(target), 
+                                      comparator = as.numeric(comparator)))
+                        }))
+
+files <- list.files(file.path(cuimcDir, "shinyData"), 
+                    pattern = "covariate_balance_t\\d",
+                    full.names = TRUE)
+
+cuimcCounts <- do.call("rbind.data.frame",
+                       lapply(files, function(file) {
+                         bal <- readRDS(file)
+                         t <- sub(".*t", "", file)
+                         target <- sub("_.*", "", t)
+                         c <- sub(".*c", "", file)
+                         comparator <- sub("_.*", "", c)
+                         return(list(rows = nrow(bal), target = as.numeric(target), 
+                                     comparator = as.numeric(comparator)))
+                       }))
+```
+
+```{r}
+#library(dplyr)
+sidiapCounts %>% filter(rows == max(sidiapCounts$rows) | rows == min(sidiapCounts$rows)) %>%
+  inner_join(cohorts, by = c("target" = "cohortId")) %>% 
+  rename(targetName = shinyName) %>%
+  inner_join(cohorts, by = c("comparator" = "cohortId")) %>% 
+  rename(comparatorName = shinyName) %>% 
+  select(rows, targetName, comparatorName) %>% mutate(databaseId = "SIDIAP")
+
+cuimcCounts %>% filter(rows == max(cuimcCounts$rows) | rows == min(cuimcCounts$rows)) %>%
+  inner_join(cohorts, by = c("target" = "cohortId")) %>% 
+  rename(targetName = shinyName) %>%
+  inner_join(cohorts, by = c("comparator" = "cohortId")) %>% 
+  rename(comparatorName = shinyName) %>% 
+  select(rows, targetName, comparatorName) %>% mutate(databaseId = "CUIMC")
+
+```
+
+
 # Balance plots
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
